@@ -1,4 +1,4 @@
-/* $Id: recvstatus3.c,v 1.8.2.1.2.3 2010/09/29 16:06:34 uehira Exp $ */
+/* $Id: recvstatus3.c,v 1.8.2.1.2.4 2010/09/30 14:51:03 uehira Exp $ */
 
 /* 
  * recvstatus3 :
@@ -8,6 +8,7 @@
 /*
  * 2005-04-26  Initial version.
  * 2005-05-18  close security hall.
+ * 2010-09-30  64bit check.
  */
 
 #ifdef HAVE_CONFIG_H
@@ -15,7 +16,6 @@
 #endif
 
 #include <sys/types.h>
-#include <sys/stat.h>
 #include <sys/socket.h>
 #include <netdb.h>
 #include <netinet/in.h>
@@ -49,16 +49,15 @@
 #define PATHMAX      1024
 
 static const char rcsid[] =
-  "$Id: recvstatus3.c,v 1.8.2.1.2.3 2010/09/29 16:06:34 uehira Exp $";
+  "$Id: recvstatus3.c,v 1.8.2.1.2.4 2010/09/30 14:51:03 uehira Exp $";
 
 char *progname, *logfile;
-int  daemon_mode, syslog_mode;
-int  exit_status;
+int  exit_status, syslog_mode;
 
+static int  daemon_mode;
 
+/* prototypes */
 static void usage(void);
-static int dir_check(char *);
-
 int main(int, char *[]);
 
 int
@@ -77,7 +76,7 @@ main(int argc, char *argv[])
   char  *dirtop, dirname[PATHMAX], filename[PATHMAX], *ptname;
   size_t  dsize;
   char  msg[MAXMSG];
-  unsigned char  rbuf[MAXMSG], *ptr;
+  uint8_w  rbuf[MAXMSG], *ptr;
   int  c, chnum;
 #if DEBUG
   int  i = 0;
@@ -95,7 +94,7 @@ main(int argc, char *argv[])
   if (strcmp(progname, "recvstatus3d") == 0)
     daemon_mode = 1;
   
-  sockbuf = DEFAULT_SNDBUF;  /* default socket buffer size in KB */
+  sockbuf = DEFAULT_RCVBUF;  /* default socket buffer size in KB */
 
   while ((c = getopt(argc, argv, "D")) != -1)
     switch (c) {
@@ -192,7 +191,7 @@ main(int argc, char *argv[])
       (void)getnameinfo(sa, fromlen,
 			host_, sizeof(host_), port_, sizeof(port_),
 			NI_DGRAM | NI_NUMERICHOST | NI_NUMERICSERV);
-      (void)printf("%s : %s : %ld byte(s)\n", host_, port_, psize);
+      (void)printf("%s : %s : %zd byte(s)\n", host_, port_, psize);
 #endif
 
 #if DEBUG
@@ -249,14 +248,14 @@ main(int argc, char *argv[])
 	dsize = fwrite(ptr, 1, LS8_A8_DLEN, fp);
 	if (dsize != LS8_A8_DLEN) {
 	  (void)snprintf(msg, sizeof(msg),
-			 "strange A8 packet: %ld bytes\n", dsize);
+			 "strange A8 packet: %zu bytes\n", dsize);
 	  write_log(msg);
 	}
       } else if (rbuf[LS8_PID] == 0xA9) {
 	dsize = fwrite(ptr, 1, LS8_A9_DLEN, fp);
 	if (dsize != LS8_A9_DLEN) {
 	  (void)snprintf(msg, sizeof(msg),
-			 "strange A9 packet: %ld bytes\n", dsize);
+			 "strange A9 packet: %zu bytes\n", dsize);
 	  write_log(msg);
 	}
       }
@@ -265,33 +264,11 @@ main(int argc, char *argv[])
   }  /* for (;;) (main loop) */
 }
 
-/* check dir exists or not. If doesn't, make it.
- * return : 1: make dir, 0: dir already exists, -1: error */
-static int
-dir_check(char *path)
-
-{
-  struct stat sb;
-
-  if (stat(path, &sb) < 0) {
-    if (errno == ENOENT) {  /* if no such dir, make dir */
-      if (mkdir(path, S_IRWXU | S_IRWXG | S_IRWXO) < 0)
-	return (-1);
-      else
-	return (1);
-    } else
-      return (-1);
-  }
-  else if (!S_ISDIR(sb.st_mode))
-    return (-1);  /* path exists, but not directory */  
-
-  return (0);
-}
-
 static void
 usage(void)
 {
 
+  WIN_version();
   (void)fprintf(stderr, "%s\n", rcsid);
   (void)fprintf(stderr, "Usage of %s :\n", progname);
   if (daemon_mode)
